--- a/IntermediatePython/Data Structures.ipynb
+++ b/IntermediatePython/Data Structures.ipynb
@@ -121,9 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "print(random.randrange(100))"
@@ -138,9 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 1, 3, 4, 6, 5, 5, 3, 6, 2, 4, 5, 6, 3, 3, 5, 1, 4, 1, 3, 5, 1, 1, 3, 4, 6, 4, 3, 2, 6, 4, 1, 3, 1, 5, 5, 3, 2, 1, 1, 3, 2, 5, 5, 6, 4, 2, 3, 2, 4, 5, 3, 1, 2, 4, 1, 5, 4, 1, 4, 3, 1, 6, 5, 4, 4, 2, 5, 4, 4, 6, 6, 4, 4, 6, 5, 2, 4, 3, 6, 2, 5, 4, 2, 6, 1, 2, 2, 1, 1, 1, 2, 2, 2, 6, 2, 4, 3, 3, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "print([random.randrange(6)+1 for i in range(100)])"
    ]
@@ -214,9 +230,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('alpha', 'beta', 'gamma', 'delta')\n"
+     ]
+    }
+   ],
    "source": [
     "t = (\"alpha\", \"beta\", \"gamma\", \"delta\")\n",
     "print(t)"
@@ -231,18 +255,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'gamma'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t[-2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('beta', 'gamma')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t[1:3]"
    ]
@@ -256,9 +302,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepsilon\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
+     ]
+    }
+   ],
    "source": [
     "t.append(\"epsilon\")"
    ]
@@ -272,9 +330,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mt\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbravo\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "t[2] = \"bravo\""
    ]
@@ -353,9 +423,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n",
+      "{'beta', 'delta', 'alpha', 'gamma', 'epsilon'}\n"
+     ]
+    }
+   ],
    "source": [
     "s = set([\"alpha\", \"beta\", \"gamma\", \"delta\", \"epsilon\"])\n",
     "print(type(s))\n",
@@ -490,9 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "t = dict() # same as t = {}\n",
     "print(type(t))"
@@ -507,13 +594,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3}\n"
+     ]
+    }
+   ],
    "source": [
     "items = [(\"a\", 1), (\"b\", 2), (\"c\", 3)]\n",
     "t = dict(items)\n",
     "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = {\n",
+    "\"locale\": \"en-US\",\n",
+    "\"primary_business_line\": \"womens\",\n",
+    "\"email\": \"colin.jemmott+maternity@stitchfix.com\",\n",
+    "\"household\": [\n",
+    "{\n",
+    "\"external_id\": \"93aeb9ab-d07c-43a7-86fe-bbf65c1a6b28\",\n",
+    "\"client_id\": 39533859\n",
+    "},\n",
+    "{\n",
+    "\"external_id\": \"93aeb9ab-d07c-43a7-86fe-ouboubob\",\n",
+    "\"client_id\": 702147\n",
+    "}\n",
+    "],\n",
+    "\"id\": 39533859,\n",
+    "\"business_line\": \"womens\",\n",
+    "\"region\": \"US\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'external_id': '93aeb9ab-d07c-43a7-86fe-bbf65c1a6b28', 'client_id': 39533859}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x['household'][0]"
    ]
   },
   {
@@ -1289,7 +1430,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1303,9 +1444,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
